button only for latest version

--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc655fb9",
+   "id": "b21c4a12",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3feb4e26",
+   "id": "c4584bdd",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,17 +27,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d14644d9",
+   "id": "ec958990",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer>=0.1.5"
+    "!pip install -q data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a4e29fb",
+   "id": "a6bd19ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b9d6351",
+   "id": "1c59c24a",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad282cb",
+   "id": "3498a0f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc50c7d5",
+   "id": "ff6a567e",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b39808",
+   "id": "795c6336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9b53c6b",
+   "id": "f91d0f1e",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff4fceed",
+   "id": "efd7c908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42105d28",
+   "id": "c72f57d3",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ad2186",
+   "id": "eecdbd48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "080789dd",
+   "id": "5d839066",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "214773d1",
+   "id": "92385cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eecc55a",
+   "id": "ca8768b3",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae18dc2b",
+   "id": "fe04a2ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4273457",
+   "id": "705b8f82",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4999ecca",
+   "id": "178b4b52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3d53148",
+   "id": "52429447",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efd6a266",
+   "id": "a4e0c81d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b580e182",
+   "id": "efd81057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea98c3df",
+   "id": "d7217232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f43d6a",
+   "id": "0c3c16ce",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4127be9",
+   "id": "9f7c417e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d649ab",
+   "id": "8b3aafb9",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f0d0695",
+   "id": "b8092031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bca22085",
+   "id": "3c5b7f83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7b26139",
+   "id": "0d566d53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d0d966",
+   "id": "fd5c1377",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
