--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75adfdca",
+   "id": "f0a655e1",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1a35fc7",
+   "id": "ebaa76d5",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "066943db",
+   "id": "5ae77856",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,17 +36,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d33f4d",
+   "id": "7e1776e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer>=0.1.5 pillow>=12.0.0"
+    "!pip install -q data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae5b19c9",
+   "id": "b00e80af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q pillow>=12.0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b3d1f25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db89c9ed",
+   "id": "fbcb7d19",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -74,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66985142",
+   "id": "df240606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59fc1895",
+   "id": "b8468ab3",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -118,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59d34a45",
+   "id": "80744554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60ea632e",
+   "id": "07c8bba9",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -144,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1e4145",
+   "id": "debb915a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172662a0",
+   "id": "a1a5d4d6",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -182,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cad1986",
+   "id": "ec8cccfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24de8948",
+   "id": "5eb9043c",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -208,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c7c2ba0",
+   "id": "4488c772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce431f01",
+   "id": "acb0c0a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a18a82",
+   "id": "3877ebc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e7ed9c",
+   "id": "f550fae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c59dd7e",
+   "id": "c58801b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c6dc75",
+   "id": "213807d0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -342,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d83a7369",
+   "id": "6d4138a6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -350,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6cf8ca",
+   "id": "1e7a0d4c",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -367,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62d3c8d",
+   "id": "84ad88ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80485f13",
+   "id": "39f2467e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207a545a",
+   "id": "9b6f6e49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d873ef3f",
+   "id": "08075e2a",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -411,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "424d98c0",
+   "id": "e563d826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcdb8197",
+   "id": "79679d0c",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -432,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f84a52",
+   "id": "99ad3f66",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da7ce8d2",
+   "id": "aee25107",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -469,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c71f77a7",
+   "id": "2a665137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "282da6b7",
+   "id": "78226714",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09214b2d",
+   "id": "58f862fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2ea6c50",
+   "id": "d9e8b66b",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
