--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6dd7e91b",
+   "id": "08652297",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0fcabe0",
+   "id": "56453533",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,17 +25,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26150284",
+   "id": "1bebd037",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer>=0.1.5"
+    "!pip install -q data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afc3fb2c",
+   "id": "4a80501c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e17bd2",
+   "id": "e1197e2f",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "346eec1f",
+   "id": "c84d7f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a95a5414",
+   "id": "4f7cd0e0",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7971d997",
+   "id": "7d2a3a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ac1115",
+   "id": "4239c705",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfea0c7",
+   "id": "dbba56d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9808126",
+   "id": "b1d7bf14",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea9ff73",
+   "id": "4523896b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13148fd5",
+   "id": "9f808014",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e054714",
+   "id": "32c3b1f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da4a52dd",
+   "id": "3ebd008d",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b8bccaf",
+   "id": "70aafa95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12d1db15",
+   "id": "e580194b",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe34e957",
+   "id": "64e17656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "767cb1fc",
+   "id": "b308d402",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d1e1f93",
+   "id": "90e9079e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0ace4e",
+   "id": "bdc0bb9d",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "810a6925",
+   "id": "7796b12c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0631940",
+   "id": "f4b1f7ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d30d6b1b",
+   "id": "8c4b13b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c6295b",
+   "id": "d948303e",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc57d1c",
+   "id": "e431bd3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d7528e",
+   "id": "8a0eff6e",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c06c5c3f",
+   "id": "fe4297f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5abbb3e7",
+   "id": "acf9c8b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7e5706",
+   "id": "2544e10b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f596f54b",
+   "id": "d3defc17",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
