--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f78c3264",
+   "id": "ef3027fd",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "becb0165",
+   "id": "69a3dfd7",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,17 +27,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a317a0a6",
+   "id": "2d93af83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer"
+    "!pip install -qU data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82122fb6",
+   "id": "26a826f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f918bb8",
+   "id": "45f7ec9f",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b2ac5d4",
+   "id": "c9753116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6bdb412",
+   "id": "11bed01d",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8e966ae",
+   "id": "d7d581d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14c27a7",
+   "id": "9213deef",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d30c9613",
+   "id": "1de03c94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80234300",
+   "id": "d2eab698",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd9867b",
+   "id": "4cd6bb8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3e49033",
+   "id": "736f4dc5",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5efc62c",
+   "id": "c6094cb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24b6158",
+   "id": "f14c8397",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28582202",
+   "id": "589d865b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36966929",
+   "id": "6625b19a",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6927b4c6",
+   "id": "77854ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a5a9a5",
+   "id": "b8231cc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40148f78",
+   "id": "176855ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6922c71",
+   "id": "07185bb3",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91ecf297",
+   "id": "ea0ac5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f2d6ebb",
+   "id": "945ea8c0",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a6ac78a",
+   "id": "149b509b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab98c20",
+   "id": "0f1849e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c97828",
+   "id": "9442e3e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e85dcb31",
+   "id": "69e9831e",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
