--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08652297",
+   "id": "c95de131",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56453533",
+   "id": "b4c9635c",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,17 +25,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bebd037",
+   "id": "32b06b7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer"
+    "!pip install -qU data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a80501c",
+   "id": "d4b2540d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1197e2f",
+   "id": "090d5b4d",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c84d7f47",
+   "id": "81d9e5a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f7cd0e0",
+   "id": "004ea5a1",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d2a3a60",
+   "id": "fe6a6d01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4239c705",
+   "id": "e15e3fe6",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbba56d6",
+   "id": "70e94897",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d7bf14",
+   "id": "84426488",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4523896b",
+   "id": "fe15fafd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f808014",
+   "id": "a079da7b",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c3b1f7",
+   "id": "b2268fab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ebd008d",
+   "id": "77804a37",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70aafa95",
+   "id": "cfdca13c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e580194b",
+   "id": "61b952e4",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e17656",
+   "id": "c890342d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b308d402",
+   "id": "de601ca2",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e9079e",
+   "id": "ed6e2c88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc0bb9d",
+   "id": "cfa7a171",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7796b12c",
+   "id": "d0a2c8fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4b1f7ce",
+   "id": "d56cc305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c4b13b2",
+   "id": "a923e1f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d948303e",
+   "id": "87b434bb",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e431bd3f",
+   "id": "64dd6ed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a0eff6e",
+   "id": "449df416",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe4297f6",
+   "id": "6c2deda4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acf9c8b0",
+   "id": "7e41c983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2544e10b",
+   "id": "d5268407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3defc17",
+   "id": "874083d2",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
