--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b21c4a12",
+   "id": "62d29d7b",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4584bdd",
+   "id": "c10e813d",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,17 +27,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec958990",
+   "id": "e0db7e3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer"
+    "!pip install -qU data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6bd19ba",
+   "id": "ce081afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c59c24a",
+   "id": "2cb5e676",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3498a0f3",
+   "id": "f7020536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff6a567e",
+   "id": "37d5768b",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "795c6336",
+   "id": "e5cf138c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f91d0f1e",
+   "id": "d614fac6",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efd7c908",
+   "id": "dfbd7bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c72f57d3",
+   "id": "fdb0b22f",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eecdbd48",
+   "id": "af64349c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d839066",
+   "id": "c07f592f",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92385cbd",
+   "id": "1b9ae5f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca8768b3",
+   "id": "8893aaf1",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe04a2ff",
+   "id": "4b78e470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "705b8f82",
+   "id": "c0d2e97a",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "178b4b52",
+   "id": "79625928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52429447",
+   "id": "7df7b4af",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4e0c81d",
+   "id": "e43873ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efd81057",
+   "id": "d211b3df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7217232",
+   "id": "5a7f2e4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c3c16ce",
+   "id": "3b10d9e4",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f7c417e",
+   "id": "5b0bc4f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b3aafb9",
+   "id": "a87e8b8d",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8092031",
+   "id": "92a3b906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c5b7f83",
+   "id": "48a153cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d566d53",
+   "id": "53a22fbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd5c1377",
+   "id": "e26365d8",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
