--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f0a655e1",
+   "id": "e2dc539e",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebaa76d5",
+   "id": "037eb557",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae77856",
+   "id": "a03c2c76",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,17 +36,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e1776e3",
+   "id": "4c804945",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer"
+    "!pip install -qU data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b00e80af",
+   "id": "7d5b55a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b3d1f25",
+   "id": "d6d4560f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcb7d19",
+   "id": "81cbdc29",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df240606",
+   "id": "9d046649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8468ab3",
+   "id": "2411260e",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80744554",
+   "id": "26fbb414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c8bba9",
+   "id": "a103a98c",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debb915a",
+   "id": "796b0217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a5d4d6",
+   "id": "acf04c1a",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec8cccfb",
+   "id": "fe51662d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eb9043c",
+   "id": "4120847f",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4488c772",
+   "id": "39e8f5b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb0c0a5",
+   "id": "7931046e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3877ebc0",
+   "id": "fe1a3c34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f550fae3",
+   "id": "1031bd73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c58801b5",
+   "id": "4000604f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "213807d0",
+   "id": "41996558",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d4138a6",
+   "id": "92f765f7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7a0d4c",
+   "id": "0c78cf89",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ad88ca",
+   "id": "8eac11ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39f2467e",
+   "id": "9dbee16c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b6f6e49",
+   "id": "6540f043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08075e2a",
+   "id": "a265c96c",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e563d826",
+   "id": "7be20be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79679d0c",
+   "id": "c72684f2",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ad3f66",
+   "id": "eb3cd699",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee25107",
+   "id": "297bb3d7",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a665137",
+   "id": "e9ccd061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78226714",
+   "id": "a9cc51f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f862fd",
+   "id": "218fb907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e8b66b",
+   "id": "0376cdc2",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
