Make generate collab notebooks

--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4c424f2",
+   "id": "dd84ae07",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ceb13f2",
+   "id": "c360a9ad",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4096cd",
+   "id": "87a8ce61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21336bf3",
+   "id": "e1e59f04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db8fa976",
+   "id": "62d8532c",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -65,14 +65,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e17b2b",
+   "id": "c8400793",
    "metadata": {},
    "outputs": [],
    "source": [
     "from data_designer.essentials import (\n",
+    "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
-    "    InferenceParameters,\n",
     "    ModelConfig,\n",
     "    SeedConfig,\n",
     ")"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c28647",
+   "id": "2ce22178",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cecf9242",
+   "id": "d1bbee99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74eab801",
+   "id": "78e60b5b",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b31991e8",
+   "id": "94920b02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=InferenceParameters(\n",
+    "        inference_parameters=ChatCompletionInferenceParams(\n",
     "            temperature=0.5,\n",
     "            top_p=1.0,\n",
     "            max_tokens=1024,\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "006d1625",
+   "id": "3d0467d6",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "396a4ed5",
+   "id": "cf0a2850",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9860369b",
+   "id": "948b7d10",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65a2fa3c",
+   "id": "a6748ffd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea11134a",
+   "id": "2416525c",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "209af41c",
+   "id": "eddf0d66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f43d20",
+   "id": "ac832ac3",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402a1025",
+   "id": "4c2705e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de294013",
+   "id": "9539e48c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38c360d",
+   "id": "3558b59a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a385031",
+   "id": "8e0e2665",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3531b1e4",
+   "id": "6146897c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fec6251",
+   "id": "861616b7",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bace6acb",
+   "id": "fcf0627e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eaafc74",
+   "id": "032f967b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473a0c89",
+   "id": "b4e77080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7408eef8",
+   "id": "1bb8e71b",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
