--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4ac4d55",
+   "id": "32cfb8c7",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e9f3c47",
+   "id": "988fb995",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41b31194",
+   "id": "789ff539",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "502b3aba",
+   "id": "7a1e9285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c512fbc",
+   "id": "398ab04c",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,15 +63,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fae521f",
+   "id": "ceff1922",
    "metadata": {},
    "outputs": [],
    "source": [
     "from data_designer.essentials import (\n",
     "    CategorySamplerParams,\n",
+    "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
-    "    InferenceParameters,\n",
     "    LLMTextColumnConfig,\n",
     "    ModelConfig,\n",
     "    PersonFromFakerSamplerParams,\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e71d0256",
+   "id": "7a4f633d",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68fc7172",
+   "id": "06c7ef7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a821a27",
+   "id": "3d2eb368",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9515141",
+   "id": "db859391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=InferenceParameters(\n",
+    "        inference_parameters=ChatCompletionInferenceParams(\n",
     "            temperature=0.5,\n",
     "            top_p=1.0,\n",
     "            max_tokens=1024,\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b940ab9",
+   "id": "9264dfaf",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec21da7e",
+   "id": "6c78af77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b2324e",
+   "id": "2ea6b7fb",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f49f435e",
+   "id": "aba21308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f582b642",
+   "id": "23620264",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cfc43b1",
+   "id": "a41a75ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d0eea21",
+   "id": "b8449bc2",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5e65724",
+   "id": "5c115016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6788771",
+   "id": "52afce00",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2705cd9",
+   "id": "c5d8a438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3dd2f69",
+   "id": "5cdba8c3",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e43147",
+   "id": "b06081ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab77d01",
+   "id": "2de2bfbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "875ee6a6",
+   "id": "5e71a6b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b59e4b",
+   "id": "4e601906",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d347f4c",
+   "id": "e8ac7b80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2fb84f2",
+   "id": "62858e97",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71a31e85",
+   "id": "9fb5bf0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "501e9092",
+   "id": "60585e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f217b4a",
+   "id": "ecde0529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da82b0f",
+   "id": "1e3c3650",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
