--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a70798bc",
+   "id": "26a24343",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ed4c65d",
+   "id": "d32f42cb",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73432e8e",
+   "id": "f9c3e904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a6aac78",
+   "id": "3f0edfb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03df6d1c",
+   "id": "9cf21988",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -65,16 +65,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "befb6573",
+   "id": "d06577b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from data_designer.essentials import (\n",
     "    CategorySamplerParams,\n",
+    "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
     "    ExpressionColumnConfig,\n",
-    "    InferenceParameters,\n",
     "    LLMStructuredColumnConfig,\n",
     "    ModelConfig,\n",
     "    PersonFromFakerSamplerParams,\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a022d1ae",
+   "id": "cd09d944",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "568e1d91",
+   "id": "8c453ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de1ef709",
+   "id": "fb820501",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6757f43c",
+   "id": "101cd8dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=InferenceParameters(\n",
+    "        inference_parameters=ChatCompletionInferenceParams(\n",
     "            temperature=0.5,\n",
     "            top_p=1.0,\n",
     "            max_tokens=1024,\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d1ea9b6",
+   "id": "bdad0248",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9ad410a",
+   "id": "b2e0eb24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f918afa",
+   "id": "1a5c1d78",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aafd123",
+   "id": "c450408b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9727c5ae",
+   "id": "37d619f5",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f9df709",
+   "id": "72694c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42b7843",
+   "id": "e499b4ca",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d231f52e",
+   "id": "6cc8bf50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01dbf368",
+   "id": "9b3d177d",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d0389c6",
+   "id": "87f813b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b312d760",
+   "id": "b5159c1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6252ae9a",
+   "id": "1c1c5f3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea32a75e",
+   "id": "2b532878",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c094a400",
+   "id": "1c65dd66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8565a283",
+   "id": "286b4e46",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d48a294c",
+   "id": "c43c49d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96268be4",
+   "id": "e22f7d86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2137aaf",
+   "id": "f9f1a3f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43a66cc",
+   "id": "957defeb",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
