--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ebd062e8",
+   "id": "4ed08ded",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce5b7f7",
+   "id": "d99da0bf",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d0bfd4",
+   "id": "5f30232d",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "661740a3",
+   "id": "15c025cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c4188b",
+   "id": "05995259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddaeb938",
+   "id": "a3eaae14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3aac5e8",
+   "id": "511d669f",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b905ee",
+   "id": "b5f97ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +102,11 @@
     "\n",
     "# Data Designer imports\n",
     "from data_designer.essentials import (\n",
+    "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
     "    ImageContext,\n",
     "    ImageFormat,\n",
-    "    InferenceParameters,\n",
     "    LLMTextColumnConfig,\n",
     "    ModalityDataType,\n",
     "    ModelConfig,\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f508d655",
+   "id": "f8f5124c",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0607008",
+   "id": "0bce9c03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0467d8c",
+   "id": "acc02bcd",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e4d9a15",
+   "id": "129c1038",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
     "        alias=\"vision\",\n",
     "        model=\"meta/llama-4-scout-17b-16e-instruct\",\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=InferenceParameters(\n",
+    "        inference_parameters=ChatCompletionInferenceParams(\n",
     "            temperature=0.60,\n",
     "            top_p=0.95,\n",
     "            max_tokens=2048,\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d66a8a6",
+   "id": "dd9dd635",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ad9b04",
+   "id": "b233cfdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75935c33",
+   "id": "b63be6f9",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868e41af",
+   "id": "f1b2b4be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5466e56f",
+   "id": "ccdc19a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbca6568",
+   "id": "6d50f33a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ce17e71",
+   "id": "eef14006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c0faf28",
+   "id": "a88e613b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35bc8b77",
+   "id": "e845159e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ac3f58",
+   "id": "65cbccb4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d13a0e4",
+   "id": "41c74e44",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336af89f",
+   "id": "bdcbd1a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a57a536",
+   "id": "29691bee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e05b387",
+   "id": "7d7880e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f69d543e",
+   "id": "a310b25c",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3cb66a7",
+   "id": "aecec7eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60815241",
+   "id": "def7c9d4",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c9dddf6",
+   "id": "ca355da2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb6e2469",
+   "id": "0db8a85a",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a0ed1c",
+   "id": "ba3db7fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255b8f6f",
+   "id": "bac7c214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b935b3",
+   "id": "5f74f19b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a74f1121",
+   "id": "a1ccee89",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
