--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33b48b4e",
+   "id": "928a8d4a",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29f9af1",
+   "id": "ad16de35",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5601fb",
+   "id": "cfb08d4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de2f0af4",
+   "id": "eddeceea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400795be",
+   "id": "08e2b3bf",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -66,16 +66,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "378f6853",
+   "id": "f057319b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from data_designer.essentials import (\n",
     "    CategorySamplerParams,\n",
+    "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
     "    ExpressionColumnConfig,\n",
-    "    InferenceParameters,\n",
     "    LLMStructuredColumnConfig,\n",
     "    ModelConfig,\n",
     "    PersonFromFakerSamplerParams,\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a1ac9f",
+   "id": "e7d5e529",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d7654e5",
+   "id": "e30fdeb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27ba0edb",
+   "id": "07b8bfe7",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c24ee00e",
+   "id": "4ae518af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=InferenceParameters(\n",
+    "        inference_parameters=ChatCompletionInferenceParams(\n",
     "            temperature=0.5,\n",
     "            top_p=1.0,\n",
     "            max_tokens=1024,\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a106edc9",
+   "id": "a3fa2eaf",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a167f7c",
+   "id": "e1b59bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf68c72",
+   "id": "5e220f78",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f8f034e",
+   "id": "e814ca47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d5c722a",
+   "id": "303ebd6f",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013caa3d",
+   "id": "361afe50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef426a65",
+   "id": "b18e511d",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27abbd6d",
+   "id": "e669c009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18a8461e",
+   "id": "9ca31fb8",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f75eee6",
+   "id": "402dede2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "950c9596",
+   "id": "c028223a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c04ca5a",
+   "id": "32d6fdaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0704f47",
+   "id": "3b76da46",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54a609ce",
+   "id": "1a9ac292",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae0a8a5",
+   "id": "8e4b20ed",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e22c387a",
+   "id": "eed6e04b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c6b36b3",
+   "id": "b6d1d270",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138ed487",
+   "id": "058d6b65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde73253",
+   "id": "d3affdac",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
