--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a6b2b3f",
+   "id": "ce777a5d",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137d8273",
+   "id": "442b70e6",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6ce3dc2",
+   "id": "9ee97c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70d6ffc8",
+   "id": "18c06754",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0313c9",
+   "id": "9394bcd4",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -66,14 +66,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa2cdf1",
+   "id": "6f1099d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from data_designer.essentials import (\n",
+    "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
-    "    InferenceParameters,\n",
     "    ModelConfig,\n",
     "    SeedConfig,\n",
     ")"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9769f392",
+   "id": "bc74d436",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d79db916",
+   "id": "0f9c59fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08dd3894",
+   "id": "c92d4c3c",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3994368e",
+   "id": "543805b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=InferenceParameters(\n",
+    "        inference_parameters=ChatCompletionInferenceParams(\n",
     "            temperature=0.5,\n",
     "            top_p=1.0,\n",
     "            max_tokens=1024,\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f12d6d2",
+   "id": "29f69761",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f3d7640",
+   "id": "7b18a399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f08df99",
+   "id": "5439e926",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f265e74c",
+   "id": "d4cbb09e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bffa239",
+   "id": "367fd06d",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e486a6",
+   "id": "1cbcf034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cfe2edd",
+   "id": "ef3d8dcf",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a59576",
+   "id": "6aa843f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c5aedd4",
+   "id": "2134a59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d17df0a5",
+   "id": "3c3c39bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3389a088",
+   "id": "bf4b07b5",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0443498",
+   "id": "e7813016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0527a606",
+   "id": "db2d39b6",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2118b49e",
+   "id": "2fcc5cb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f9ad59",
+   "id": "036581fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8517866d",
+   "id": "74e91fe3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b62dd069",
+   "id": "6f65cadc",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
