--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc93d603",
+   "id": "560882a6",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31146c45",
+   "id": "b443ea18",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b237af81",
+   "id": "d59495b4",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b316a6",
+   "id": "e80db6fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "847a6f88",
+   "id": "15ac4714",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a0e2a31",
+   "id": "01741037",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ec632f1",
+   "id": "097a9059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +93,11 @@
     "\n",
     "# Data Designer imports\n",
     "from data_designer.essentials import (\n",
+    "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
     "    ImageContext,\n",
     "    ImageFormat,\n",
-    "    InferenceParameters,\n",
     "    LLMTextColumnConfig,\n",
     "    ModalityDataType,\n",
     "    ModelConfig,\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66efe0cc",
+   "id": "4f6ca947",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9059d31",
+   "id": "6508f2b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d60e67",
+   "id": "7343463e",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b29b57",
+   "id": "31019979",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
     "        alias=\"vision\",\n",
     "        model=\"meta/llama-4-scout-17b-16e-instruct\",\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=InferenceParameters(\n",
+    "        inference_parameters=ChatCompletionInferenceParams(\n",
     "            temperature=0.60,\n",
     "            top_p=0.95,\n",
     "            max_tokens=2048,\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c68fce",
+   "id": "186f9f98",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab84fb1",
+   "id": "80fbc002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc1fa29",
+   "id": "203663e2",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3baa7ba2",
+   "id": "1a2b0ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3780aee",
+   "id": "8cc0f6ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c46877e",
+   "id": "9fe4b02c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca338da",
+   "id": "e546cc4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb41a37",
+   "id": "eebc9963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "607bb265",
+   "id": "99b4a3b5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "984241b9",
+   "id": "58ab7a96",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca1a5ea",
+   "id": "7d735a85",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d386a38",
+   "id": "6404dc34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6209d609",
+   "id": "44f3678c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aedc7fd",
+   "id": "06009be0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc339219",
+   "id": "43e9af07",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ccc372",
+   "id": "7bce2b2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c090f413",
+   "id": "dc361acc",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e1a054c",
+   "id": "574bbc62",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab83636",
+   "id": "cc5ebe1c",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa66a2e",
+   "id": "305f90ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f92b5be",
+   "id": "ef40fc6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1bddcee",
+   "id": "72756cf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f68f95",
+   "id": "e9bac314",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
